--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test",
-    "serve:ssr:test1": "node dist/test1/server/server.mjs"
+    "test": "ng test"
+    
   },
   "private": true,
   "dependencies": {
